# including headers for make dist

# those guys belong to the dlvhex binary
noinst_HEADERS = \
	GraphProcessor.h \
	HexGrammar.h \
	HexGrammar.tcc \
	HexGrammarPTToASTConverter.h \
	RuleMLOutputBuilder.h \
	SafetyChecker.h \
	SpiritFilePositionNode.h \
	State.h \
	URLBuf.h


# those belong to libaspsolver
LIBASPSOLVER = \
	ASPSolverManager.h \
	ASPSolver.h \
	DLVProcess.h \
	DLVresultParserDriver.h \
	Process.h \
	ProcessBuf.h


# those are for libdlvhexbase
LIBDLVHEXBASE = \
	AggregateAtom.h \
	AnswerSet.h \
	Atom.h \
	AtomNode.h \
	AtomSet.h \
	AtomTable.h \
	BaseVisitor.h \
	Benchmarking.h \
	BoostComponentFinder.h \
	ComponentFinder.h \
	Component.h \
	Dependency.h \
	DependencyGraph.h \
	Error.h \
	EvaluateExtatom.h \
	ExternalAtom.h \
	globals.h \
	GraphBuilder.h \
	HexParserDriver.h \
	Literal.h \
	ModelGenerator.h \
	NodeGraph.h \
	OutputBuilder.h \
	ParserDriver.h \
	PlatformDefinitions.h \
	PluginContainer.h \
	PluginInterface.h \
	PrintVisitor.h \
	Program.h \
	ProgramCtx.h \
	Registry.h \
	Repository.h \
	ResultContainer.h \
	Rule.h \
	SpiritDebugging.h \
	SymbolTable.h \
	Term.h \
	TextOutputBuilder.h


# install libaspsolver and libdlvhexbase headers
#pkginclude_HEADERS = $(LIBASPSOLVER) $(LIBDLVHEXBASE)
