# including headers for make dist

# those guys belong to the dlvhex binary
noinst_HEADERS = \
  AggregateAtomTable.hpp \
  AnswerSet.hpp \
  AnswerSetPrinterCallback.hpp \
  ASPSolver.h \
  ASPSolverManager.h \
  Atoms.hpp \
  BaseModelGenerator.hpp \
  Benchmarking.h \
  BuiltinAtomTable.hpp \
  CAUAlgorithms.hpp \
  ComfortPluginInterface.hpp \
  ComponentGraph.hpp \
  Configuration.hpp \
  DependencyGraphFull.hpp \
  DependencyGraph.hpp \
  DLVProcess.h \
  DLVresultParserDriver.h \
  Error.h \
  EvalGraphBuilder.hpp \
  EvalGraph.hpp \
  EvalHeuristicBase.hpp \
  EvalHeuristicEasy.hpp \
  EvalHeuristicOldDlvhex.hpp \
  EvalHeuristicTrivial.hpp \
  ExternalAtomTable.hpp \
  FinalEvalGraph.hpp \
  fwd.hpp \
  GuessAndCheckModelGenerator.hpp \
  HexGrammar.h \
  HexGrammarPTToASTConverter.h \
  HexGrammar.tcc \
  HexParser.hpp \
  ID.hpp \
  InputProvider.hpp \
  Interpretation.hpp \
  Logger.hpp \
  Makefile.am \
  Makefile.in \
  ModelBuilder.hpp \
  ModelGenerator.hpp \
  ModelGraph.hpp \
  OfflineModelBuilder.hpp \
  OnlineModelBuilder.hpp \
  OrdinaryAtomTable.hpp \
  PlainModelGenerator.hpp \
  PlatformDefinitions.h \
  PluginContainer.h \
  PluginInterface.h \
  PredicateMask.hpp \
  Printer.hpp \
  Printhelpers.hpp \
  ProcessBuf.h \
  Process.h \
  ProgramCtx.h \
  Registry.hpp \
  Rule.hpp \
  RuleTable.hpp \
  SafetyChecker.h \
  SpiritDebugging.h \
  SpiritFilePositionNode.h \
  State.h \
  Table.hpp \
  Term.hpp \
  TermTable.hpp \
  URLBuf.h \
  WellfoundedModelGenerator.hpp


# those belong to libaspsolver
LIBASPSOLVER = \
	ASPSolverManager.h \
	ASPSolver.h \
	DLVProcess.h \
	DLVresultParserDriver.h \
	Process.h \
	ProcessBuf.h


# those are for libdlvhexbase
LIBDLVHEXBASE = \
	AggregateAtom.h \
	AnswerSet.h \
	Atom.h \
	AtomNode.h \
	AtomSet.h \
	AtomTable.h \
	BaseVisitor.h \
	Benchmarking.h \
	BoostComponentFinder.h \
	ComponentFinder.h \
	Component.h \
	Dependency.h \
	DependencyGraph.h \
	Error.h \
	EvaluateExtatom.h \
	ExternalAtom.h \
	globals.h \
	GraphBuilder.h \
	HexParserDriver.h \
	Literal.h \
	ModelGenerator.h \
	NodeGraph.h \
	OutputBuilder.h \
	ParserDriver.h \
	PlatformDefinitions.h \
	PluginContainer.h \
	PluginInterface.h \
	PrintVisitor.h \
	Program.h \
	ProgramCtx.h \
	Registry.h \
	Repository.h \
	ResultContainer.h \
	Rule.h \
	SpiritDebugging.h \
	SymbolTable.h \
	Term.h \
	TextOutputBuilder.h


# install libaspsolver and libdlvhexbase headers
#pkginclude_HEADERS = $(LIBASPSOLVER) $(LIBDLVHEXBASE)
