# including headers for make dist

# those guys belong to the dlvhex binary
pkginclude_HEADERS = \
  AggregateAtomTable.hpp \
  AnswerSet.hpp \
  AnswerSetPrinterCallback.hpp \
  ASPSolver.h \
  ASPSolverManager.h \
  Atoms.hpp \
  BaseModelGenerator.hpp \
  Benchmarking.h \
  BuiltinAtomTable.hpp \
  CAUAlgorithms.hpp \
  ComfortPluginInterface.hpp \
  ComponentGraph.hpp \
  Configuration.hpp \
  DependencyGraphFull.hpp \
  DependencyGraph.hpp \
  DLVProcess.h \
  DLVresultParserDriver.h \
  Error.h \
  EvalGraphBuilder.hpp \
  EvalGraph.hpp \
  EvalHeuristicBase.hpp \
  EvalHeuristicEasy.hpp \
  EvalHeuristicFromFile.hpp \
  EvalHeuristicOldDlvhex.hpp \
  EvalHeuristicTrivial.hpp \
  ExternalAtomTable.hpp \
  FinalEvalGraph.hpp \
  fwd.hpp \
  GraphvizHelpers.hpp \
  GuessAndCheckModelGenerator.hpp \
  HexGrammar.h \
  HexGrammar.tcc \
  HexParser.hpp \
  HexParserModule.hpp \
  HigherOrderPlugin.hpp \
  ID.hpp \
  InputProvider.hpp \
  Interpretation.hpp \
  Logger.hpp \
  MLPSolver.hpp \
  MLPSyntaxChecker.hpp \
  Makefile.am \
  Makefile.in \
  ModelBuilder.hpp \
  ModelGenerator.hpp \
  ModelGraph.hpp \
  Module.hpp \
  ModuleAtomTable.hpp \
  ModuleTable.hpp \
  OfflineModelBuilder.hpp \
  OnlineModelBuilder.hpp \
  OrdinaryAtomTable.hpp \
  PlainAuxPrinter.hpp \
  PlainModelGenerator.hpp \
  PlatformDefinitions.h \
  PluginContainer.h \
  PluginInterface.h \
  Predicate.hpp \
  PredicateMask.hpp \
  PredicateTable.hpp \
  Printer.hpp \
  Printhelpers.hpp \
  ProcessBuf.h \
  Process.h \
  ProgramCtx.h \
  QueryPlugin.hpp \
  Registry.hpp \
  Rule.hpp \
  RuleTable.hpp \
  StrongNegationPlugin.hpp \
  SafetyChecker.h \
  State.h \
  Table.hpp \
  Term.hpp \
  TermTable.hpp \
  URLBuf.h \
  WellfoundedModelGenerator.hpp


# those belong to libaspsolver
LIBASPSOLVER = \
	ASPSolverManager.h \
	ASPSolver.h \
	DLVProcess.h \
	DLVresultParserDriver.h \
	Process.h \
	ProcessBuf.h


# those are for libdlvhexbase
LIBDLVHEXBASE = \
	AggregateAtom.h \
	AnswerSet.h \
	Atom.h \
	#AtomNode.h \
	AtomSet.h \
	AtomTable.h \
	BaseVisitor.h \
	Benchmarking.h \
	BoostComponentFinder.h \
	ComponentFinder.h \
	Component.h \
	Dependency.h \
	DependencyGraph.h \
	Error.h \
	EvaluateExtatom.h \
	ExternalAtom.h \
	globals.h \
	GraphBuilder.h \
	HexParserDriver.h \
	Literal.h \
	ModelGenerator.h \
	NodeGraph.h \
	OutputBuilder.h \
	ParserDriver.h \
	PlatformDefinitions.h \
	PluginContainer.h \
	PluginInterface.h \
	PrintVisitor.h \
	Program.h \
	ProgramCtx.h \
	Registry.h \
	Repository.h \
	ResultContainer.h \
	Rule.h \
	SpiritDebugging.h \
	SymbolTable.h \
	Term.h \
	TextOutputBuilder.h


# install libaspsolver and libdlvhexbase headers
#pkginclude_HEADERS = $(LIBASPSOLVER) $(LIBDLVHEXBASE)
