# including headers for make dist

# those guys belong to the dlvhex binary
pkgincludedir=$(includedir)/dlvhex2
pkginclude_HEADERS = \
  AggregateAtomTable.h \
  AnswerSet.h \
  AnswerSetPrinterCallback.h \
  ASPSolver.h \
  ASPSolverManager.h \
  Atoms.h \
  BaseModelGenerator.h \
  Benchmarking.h \
  BuiltinAtomTable.h \
  CAUAlgorithms.h \
  ComfortPluginInterface.h \
  ComponentGraph.h \
  ConcurrentMessageQueueOwning.h \
  Configuration.h \
  DependencyGraphFull.h \
  DependencyGraph.h \
  DumpingEvalGraphBuilder.h \
  DLVProcess.h \
  DLVresultParserDriver.h \
  Error.h \
  EvalGraphBuilder.h \
  EvalGraph.h \
  EvalHeuristicASP.h \
  EvalHeuristicBase.h \
  EvalHeuristicEasy.h \
  EvalHeuristicFromFile.h \
  EvalHeuristicOldDlvhex.h \
  EvalHeuristicShared.h \
  EvalHeuristicTrivial.h \
  ExternalAtomTable.h \
  FinalEvalGraph.h \
  fwd.h \
  GraphvizHelpers.h \
  GuessAndCheckModelGenerator.h \
  HexGrammar.h \
  HexGrammar.tcc \
  HexParser.h \
  HexParserModule.h \
  HigherOrderPlugin.h \
  ID.h \
  InputProvider.h \
  Interpretation.h \
  Logger.h \
  MLPSolver.h \
  MLPSyntaxChecker.h \
  Makefile.am \
  Makefile.in \
  ModelBuilder.h \
  ModelGenerator.h \
  ModelGraph.h \
  Module.h \
  ModuleAtomTable.h \
  ModuleTable.h \
  OfflineModelBuilder.h \
  OnlineModelBuilder.h \
  OrdinaryAtomTable.h \
  PlainAuxPrinter.h \
  PlainModelGenerator.h \
  PlatformDefinitions.h \
  PluginContainer.h \
  PluginInterface.h \
  Predicate.h \
  PredicateMask.h \
  PredicateTable.h \
  Printer.h \
  Printhelpers.h \
  ProcessBuf.h \
  Process.h \
  ProgramCtx.h \
  QueryPlugin.h \
  Registry.h \
  Rule.h \
  RuleTable.h \
  StrongNegationPlugin.h \
  SafetyChecker.h \
  State.h \
  Table.h \
  Term.h \
  TermTable.h \
  URLBuf.h \
  WellfoundedModelGenerator.h


# those belong to libaspsolver
LIBASPSOLVER = \
	ASPSolverManager.h \
	ASPSolver.h \
	DLVProcess.h \
	DLVresultParserDriver.h \
	Process.h \
	ProcessBuf.h


# those are for libdlvhexbase
LIBDLVHEXBASE = \
	AggregateAtom.h \
	AnswerSet.h \
	Atom.h \
	#AtomNode.h \
	AtomSet.h \
	AtomTable.h \
	BaseVisitor.h \
	Benchmarking.h \
	BoostComponentFinder.h \
	ComponentFinder.h \
	Component.h \
	Dependency.h \
	DependencyGraph.h \
	Error.h \
	EvaluateExtatom.h \
	ExternalAtom.h \
	globals.h \
	GraphBuilder.h \
	HexParserDriver.h \
	Literal.h \
	ModelGenerator.h \
	NodeGraph.h \
	OutputBuilder.h \
	ParserDriver.h \
	PlatformDefinitions.h \
	PluginContainer.h \
	PluginInterface.h \
	PrintVisitor.h \
	Program.h \
	ProgramCtx.h \
	Registry.h \
	Repository.h \
	ResultContainer.h \
	Rule.h \
	SpiritDebugging.h \
	SymbolTable.h \
	Term.h \
	TextOutputBuilder.h


# install libaspsolver and libdlvhexbase headers
#pkginclude_HEADERS = $(LIBASPSOLVER) $(LIBDLVHEXBASE)
