# including headers for make dist

# those guys belong to the dlvhex binary
pkgincludedir=$(includedir)/dlvhex2
pkginclude_HEADERS = \
  AggregateAtomTable.h \
  AggregatePlugin.h \
  AnnotatedGroundProgram.h \
  AnswerSet.h \
  AnswerSetPrinterCallback.h \
  ASPSolver.h \
  ASPSolverManager.h \
  AsynchronousModelGenerator.h \
  Atoms.h \
  BaseModelGenerator.h \
  Benchmarking.h \
  ClaspSolver.h \
  CDNLSolver.h \
  BuiltinAtomTable.h \
  CAUAlgorithms.h \
  ComfortPluginInterface.h \
  ComponentGraph.h \
  ConcurrentMessageQueueOwning.h \
  Configuration.h \
  DependencyGraph.h \
  DumpingEvalGraphBuilder.h \
  DLVProcess.h \
  DLVresultParserDriver.h \
  Error.h \
  ExtSourceProperties.h \
  EvalGraphBuilder.h \
  EvalGraph.h \
  EvalHeuristicASP.h \
  EvalHeuristicBase.h \
  EvalHeuristicEasy.h \
  EvalHeuristicFromFile.h \
  EvalHeuristicGreedy.h \
  EvalHeuristicMonolithic.h \
  EvalHeuristicOldDlvhex.h \
  EvalHeuristicShared.h \
  EvalHeuristicTrivial.h \
  ExternalAtomEvaluationHeuristicsInterface.h \
  ExternalAtomEvaluationHeuristics.h \
  ExternalAtomTable.h \
  ExternalLearningHelper.h \
  ExistsPlugin.h \
  FinalEvalGraph.h \
  FLPModelGeneratorBase.h \
  FLPModelGeneratorBase.tcc \
  FunctionPlugin.h \
  fwd.h \
  GraphvizHelpers.h \
  GuessAndCheckModelGenerator.h \
  GenuineGuessAndCheckModelGenerator.h \
  GenuineSolver.h \
  HexGrammar.h \
  HexGrammar.tcc \
  InternalGroundASPSolver.h \
  InternalGroundDASPSolver.h \
  InternalGrounder.h \
  HexParser.h \
  HexParserModule.h \
  HigherOrderPlugin.h \
  ID.h \
  InputProvider.h \
  Interpretation.h \
  LiberalSafetyChecker.h \
  Logger.h \
  MLPSolver.h \
  MLPSyntaxChecker.h \
  Makefile.am \
  Makefile.in \
  Nogood.h \
  OrdinaryASPProgram.h \
  OrdinaryASPSolver.h \
  ManualEvalHeuristicsPlugin.h \
  ModelBuilder.h \
  ModelGenerator.h \
  ModelGraph.h \
  Module.h \
  ModuleAtomTable.h \
  ModuleTable.h \
  NogoodGrounder.h \
  OfflineModelBuilder.h \
  OnlineModelBuilder.h \
  OrdinaryAtomTable.h \
  PlainAuxPrinter.h \
  PlainModelGenerator.h \
  GenuinePlainModelGenerator.h \
  GringoGrounder.h \
  PlatformDefinitions.h \
  PluginContainer.h \
  PluginInterface.h \
  Predicate.h \
  PredicateMask.h \
  PredicateTable.h \
  Printer.h \
  Printhelpers.h \
  ProcessBuf.h \
  Process.h \
  ProgramCtx.h \
  PythonPlugin.h \
  QueryPlugin.h \
  Registry.h \
  Rule.h \
  RuleTable.h \
  StrongNegationPlugin.h \
  SATSolver.h \
  SafetyChecker.h \
  Set.h \
  DynamicVector.h \
  State.h \
  Table.h \
  Term.h \
  TermTable.h \
  URLBuf.h \
  UnfoundedSetCheckHeuristics.h \
  UnfoundedSetCheckHeuristicsInterface.h \
  UnfoundedSetChecker.h \
  GenuineWellfoundedModelGenerator.h \
  WeakConstraintPlugin.h \
  WellfoundedModelGenerator.h
